fixed scrollbar

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -27,8 +27,6 @@ body {
       width: 25%;
       z-index: 4;
       overflow-y: scroll;
-      left:0;
-      right:-17px;
     }
     div {
       img {
