--- a/styles/sidenav.scss
+++ b/styles/sidenav.scss
@@ -5,6 +5,7 @@ $color4: rgba(93, 87, 107, 1);
 $color5: rgba(230, 235, 224, 1);
 $shadow: 0.2em 0.2em 0 0 $color4;
 
+
 body {
   font-family: 'Lato', sans-serif;
   aside {
@@ -13,6 +14,12 @@ body {
       box-shadow: 0.1em 0 0 0 $color4;
       border-top: solid 0.1em $color4;
       border-right: 0.1em $color4;
+    }
+    .aside-content::-webkit-scrollbar {
+      color: $color3;
+    }
+    .aside-content::-webkit-scrollbar-thumb {
+      color: $color1;
     }
     .turn-red {
       background-color: $color1;
